2014-09-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m (-sendSelectorAtIndex:withArgCount:):
    * STCompiler.m (-compileString:, -emitPopAndStoreTemporary:,
	-emitPopAndStoreVariable:, -emitPopAndStoreReceiverVariable:,
	-emitSendSelector:argCount:):
    Fix NSDebugLLog format issues detect by clang.

2013-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
    source.

    * STSourceReader.m (-readNextToken): Bug fixes:
    - Prevent out of range accesses for the input string.
    - Exponent of a real number must contain at least one digit.
    - Incorrect token range for character literals.
    - Incorrect token range for symbol immediately before end of source.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STGrammar.y (temporaries): Allow empty list.
    * STGrammar.m: Regenerated.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * NSNumber+additions.h:
    * NSNumber+additions.m:
    * STBlock.h:
    * STBlock.m:
    * STBlockContext.h:
    * STBlockContext.m:
    * STBytecodeInterpreter.h:
    * STBytecodeInterpreter.m:
    * STBytecodes.h:
    * STBytecodes.m:
    * STCompiledCode.h:
    * STCompiledCode.m:
    * STCompiledMethod.h:
    * STCompiledMethod.m:
    * STCompiledScript.m:
    * STCompiler.h:
    * STCompiler.m:
    * STExecutionContext.h:
    * STExecutionContext.m:
    * STLiterals.h:
    * STLiterals.m:
    * STMethodContext.h:
    * STMethodContext.m:
    * STSmalltalkScriptObject.m:
    * STSourceReader.h:
    * STSourceReader.m:
    * STStack.h:
    * STStack.m:
    int->NSInteger transition

2013-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-readNextToken): Fix bug where the last character
    of an identifier was dropped when the assignment operator ':=' follows
    it immediately.

2013-04-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * NSArray+additions.m (-collect:): Properly handle nil results from